#364 Removing deprecated Locale as constructor